# ORCA_collision_avoidance

./: .gitignore  DEADJOE  GUIDE.md  changes.txt
.catkin_tools/profiles/default/: devel_collisions.txt
src/agents_layer/: CMakeLists.txt  README.md  costmap_plugins.xml  package.xml
src/agents_layer/cfg/: AgentsLayer.cfg
src/agents_layer/include/agents_layer/: agents_layer.h  base_agents_layer.h
src/agents_layer/src/: agents_layer.cpp  base_agents_layer.cpp
src/cohan_planner_multi/cohan_msgs/msg/: TrackedAgent.msg
src/cohan_planner_multi/hateb_local_planner/src/: visualization.cpp
src/inhus_system/inhus/src/: humanBehaviorModel_node.cpp  supervisor_node.cpp
src/inhus_system/inhus_navigation/config/inhus_nav_config/: costmap_common.yaml  costmap_global.yaml  planner.yaml
src/inhus_system/inhus_navigation/launch/other_launch/: _map_pov.launch  _map_static.launch  _rviz_copy.launch  inhus.rviz
src/inhus_system/inhus_navigation/rviz/: inhus.rviz  smb.rviz
src/inhus_system/inhus_navigation/src/: agents_bridge.cpp  interface_morse_input_node.cpp
src/navigation/costmap_2d/src/: costmap_2d_ros.cpp  layered_costmap.cpp
src/navigation/global_planner/src/: plan_node.cpp  planner_core.cpp
src/navigation/move_base/src/: move_base.cpp
src/simulators/morse_ros/morse_ros/: test.py
src/smb/config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  planner.yaml
src/smb/include/: placeRobot.h
src/smb/launch/: all.launch  locate.launch  map.launch  move_base.launch
src/smb/src/: placeHuman_node.cpp  preprocessing_node.cpp
(+46 files in other folders)
